--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^4.7.2",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "password-hash": "^1.2.2",
