--- a/front/package.json
+++ b/front/package.json
@@ -8,18 +8,20 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "apexcharts": "^3.22.2",
+    "axios": "^0.21.0",
     "pullstate": "^1.20.3",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-highcharts": "^6.0.0",
     "react-lottie": "^1.2.3",
+    "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
