--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "pullstate": "^1.20.3",
     "react": "^17.0.1",
+    "react-animated-css": "^1.2.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-highcharts": "^6.0.0",
