--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "apexcharts": "^3.22.2",
     "axios": "^0.21.0",
+    "cors": "^2.8.5",
     "pullstate": "^1.20.3",
     "react": "^17.0.1",
     "react-animated-css": "^1.2.1",
